# pollinator

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
db/: db.sql
src/: admin.rs  db.rs  error.rs  main.rs  poll.rs  rate.rs  templates.rs  util.rs
src/poll/: borda.rs  dowdall.rs  mod.rs  multiple.rs  score.rs  single.rs
src/poll/ranked/: borda.rs  dowdall.rs  mod.rs
src/poll/simple/: mod.rs  multiple.rs  single.rs
static/: 404.html  admin.html  create.html  create_single.html  index.html  limit.html  poll.css  poll_admin.html
templates/: base.html  create.html  error.html  poll_created.html  poll_list.html  results.html  return.html  unique_scores.js  vote.html  vote_list_gen.js  vote_table.html  vote_table_gen.js  voted.html
templates/ranked/: borda_results.html  create.html  dowdall_results.html  ranked_results.html  unique_scores.js  vote.html  vote_table.html  vote_table_gen.js
templates/score/: create.html  results.html  vote.html
templates/simple/: create.html  results.html  vote.html
