[package]
authors = ["Antoni Simka <antonisimka.8@gmail.com>"]
edition = "2021"
name = "polls"
version = "1.0.0"
[dependencies]
actix-files = "0.6.0"
actix-web = "4.0.1"
anyhow = "1.0.56"
askama = "0.11.1"
base64 = "0.13.0"
bincode = "2.0.0-rc.1"
chrono = "0.4.19"
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.16"
qstring = "0.7.2"
r2d2 = "0.8.9"
r2d2_sqlite = "0.20.0"
rand = "0.8.5"
rusqlite = "0.27.0"
thiserror = "1.0.30"

[dependencies.serde]
features = ["derive"]
version = "1.0.136"
