[package]
authors = ["Antoni Simka <antonisimka.8@gmail.com>"]
edition = "2021"
name = "pollinator"
version = "1.2.0"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"
anyhow = "1.0.68"
# TODO: yarte?
askama = "0.11.1"
base64 = "0.20.0"
bincode = "2.0.0-rc.2"
chrono = "0.4.23"
env_logger = "0.10.0"
futures = "0.3.25"
log = "0.4.17"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rand = "0.8.5"
thiserror = "1.0.38"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]

[dependencies.serde]
features = ["derive"]
version = "1.0.152"
